Refactor generator class methods